@@ -1,3 +1,12 @@
+2008-05-02  Jan Michael Alonzo  <jmalonzo@unpluggable.com>
+
+        Reviewed by Eric.
+
+        https://bugs.webkit.org/show_bug.cgi?id=18811
+        Enable dashboard and offline web apps in autotools
+
+        * configure.ac:
+
 2008-05-01  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
         Reviewed by Alp Toker.
